--- a/css/common.css
+++ b/css/common.css
@@ -37,30 +37,30 @@ table { border-spacing: 0; border-collapse: collapse; }
 .header { height: 220px; margin-bottom: 30px; overflow: hidden; }
 
 .logo { position: relative; float: left; margin: 41px 40px 0 12px; }
-.logo a { display: block; background: url('../img/icons-sac7d1e1c55.png') 0 -126px no-repeat; width: 254px; height: 87px; }
+.logo a { display: block; background: url('../img/icons-sdb9cf36355.png') 0 -395px no-repeat; width: 254px; height: 87px; }
 
 .nav { float: left; margin-top: 23px; }
 .nav ul { overflow: hidden; }
 .nav li { position: relative; float: left; margin-right: 25px; }
-.nav li:hover, .nav li.active { background: url('../img/icons-sac7d1e1c55.png') 0 0 no-repeat; width: 117px; height: 116px; }
-.nav li.active .nav__item-1 { background: url('../img/icons-sac7d1e1c55.png') 0 -857px no-repeat; width: 117px; height: 116px; }
-.nav li.active .nav__item-2 { background: url('../img/icons-sac7d1e1c55.png') 0 -1109px no-repeat; width: 117px; height: 116px; }
-.nav li.active .nav__item-3 { background: url('../img/icons-sac7d1e1c55.png') 0 -1361px no-repeat; width: 117px; height: 116px; }
+.nav li:hover, .nav li.active { background: url('../img/icons-sdb9cf36355.png') 0 -269px no-repeat; width: 117px; height: 116px; }
+.nav li.active .nav__item-1 { background: url('../img/icons-sdb9cf36355.png') 0 -1586px no-repeat; width: 117px; height: 116px; }
+.nav li.active .nav__item-2 { background: url('../img/icons-sdb9cf36355.png') 0 -1838px no-repeat; width: 117px; height: 116px; }
+.nav li.active .nav__item-3 { background: url('../img/icons-sdb9cf36355.png') 0 -2090px no-repeat; width: 117px; height: 116px; }
 .nav li:active a { top: 1px; }
 .nav a { position: relative; display: block; }
 
-.nav__item-1 { background: url('../img/icons-sac7d1e1c55.png') 0 -731px no-repeat; width: 117px; height: 116px; }
-.nav__item-1:hover { background: url('../img/icons-sac7d1e1c55.png') 0 -857px no-repeat; width: 117px; height: 116px; }
+.nav__item-1 { background: url('../img/icons-sdb9cf36355.png') 0 -1460px no-repeat; width: 117px; height: 116px; }
+.nav__item-1:hover { background: url('../img/icons-sdb9cf36355.png') 0 -1586px no-repeat; width: 117px; height: 116px; }
 
-.nav__item-2 { background: url('../img/icons-sac7d1e1c55.png') 0 -983px no-repeat; width: 117px; height: 116px; }
-.nav__item-2:hover { background: url('../img/icons-sac7d1e1c55.png') 0 -1109px no-repeat; width: 117px; height: 116px; }
+.nav__item-2 { background: url('../img/icons-sdb9cf36355.png') 0 -1712px no-repeat; width: 117px; height: 116px; }
+.nav__item-2:hover { background: url('../img/icons-sdb9cf36355.png') 0 -1838px no-repeat; width: 117px; height: 116px; }
 
-.nav__item-3 { background: url('../img/icons-sac7d1e1c55.png') 0 -1235px no-repeat; width: 117px; height: 116px; }
-.nav__item-3:hover { background: url('../img/icons-sac7d1e1c55.png') 0 -1361px no-repeat; width: 117px; height: 116px; }
+.nav__item-3 { background: url('../img/icons-sdb9cf36355.png') 0 -1964px no-repeat; width: 117px; height: 116px; }
+.nav__item-3:hover { background: url('../img/icons-sdb9cf36355.png') 0 -2090px no-repeat; width: 117px; height: 116px; }
 
 .login { float: right; margin: 45px 5px 0 0; }
 
-.login_enter .login__info button:before { background: url('../img/icons-sac7d1e1c55.png') 0 -2454px no-repeat; width: 10px; height: 10px; }
+.login_enter .login__info button:before { background: url('../img/icons-sdb9cf36355.png') 0 -3534px no-repeat; width: 10px; height: 10px; }
 
 .login__pic { float: left; padding: 3px 3px 13px 3px; margin-right: 27px; background: rgba(255, 255, 255, 0.5); -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px, white 0 0 4px inset; -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px, white 0 0 4px inset; box-shadow: rgba(0, 0, 0, 0.1) 0 0 0 1px, white 0 0 4px inset; }
 .login__pic img { display: block; -webkit-box-shadow: rgba(0, 0, 0, 0.01) 0 0 0 1px; -moz-box-shadow: rgba(0, 0, 0, 0.01) 0 0 0 1px; box-shadow: rgba(0, 0, 0, 0.01) 0 0 0 1px; }
@@ -70,7 +70,7 @@ table { border-spacing: 0; border-collapse: collapse; }
 .login__info span { margin: 5px 0 5px 0; color: #2c6871; }
 .login__info a { color: #c85838; }
 .login__info button { position: relative; margin-top: 10px; padding: 4px 9px 2px 22px; background: #c85838; -webkit-border-radius: 9px; -moz-border-radius: 9px; -ms-border-radius: 9px; -o-border-radius: 9px; border-radius: 9px; font-family: "Cuprum", Arial, Tahoma, sans-serif; font-size: 12px; color: white; text-transform: uppercase; }
-.login__info button:before { content: ""; position: absolute; top: 4px; left: 7px; background: url('../img/icons-sac7d1e1c55.png') 0 -2434px no-repeat; width: 10px; height: 10px; }
+.login__info button:before { content: ""; position: absolute; top: 4px; left: 7px; background: url('../img/icons-sdb9cf36355.png') 0 -3514px no-repeat; width: 10px; height: 10px; }
 
 .bottom { overflow: hidden; }
 
@@ -98,41 +98,94 @@ table { border-spacing: 0; border-collapse: collapse; }
 .copyright { float: right; margin-top: 50px; opacity: 0.6; color: #bdc8ca; }
 
 .btn-earning { position: relative; height: 52px; padding: 0 15px 0 45px; border: 3px solid #e4e4d2; -webkit-border-radius: 26px; -moz-border-radius: 26px; -ms-border-radius: 26px; -o-border-radius: 26px; border-radius: 26px; background: #a9a555; font-size: 24px; color: white; text-shadow: rgba(0, 0, 0, 0.26) 1px 1px 0; }
-.btn-earning:before { content: ""; position: absolute; top: 11px; left: 9px; background: url('../img/icons-sac7d1e1c55.png') 0 -2257px no-repeat; width: 30px; height: 24px; }
+.btn-earning:before { content: ""; position: absolute; top: 11px; left: 9px; background: url('../img/icons-sdb9cf36355.png') 0 -3454px no-repeat; width: 30px; height: 24px; }
 
 .btn { position: relative; padding: 4px 8px 2px 19px; -webkit-border-radius: 8px; -moz-border-radius: 8px; -ms-border-radius: 8px; -o-border-radius: 8px; border-radius: 8px; font-family: "Cuprum", Arial, Tahoma, sans-serif; font-size: 12px; color: white; text-transform: uppercase; }
 .btn:before { content: ""; position: absolute; top: 4px; left: 6px; }
 
 .btn_submit { background: #a9a555; }
-.btn_submit:before { background: url('../img/icons-sac7d1e1c55.png') 0 -1947px no-repeat; width: 9px; height: 10px; }
+.btn_submit:before { background: url('../img/icons-sdb9cf36355.png') 0 -3066px no-repeat; width: 9px; height: 10px; }
 
 .btn_edit { background: #349ba6; }
-.btn_edit:before { background: url('../img/icons-sac7d1e1c55.png') 0 -2474px no-repeat; width: 9px; height: 9px; }
+.btn_edit:before { background: url('../img/icons-sdb9cf36355.png') 0 -3554px no-repeat; width: 9px; height: 9px; }
 
 .btn_delete { background: #c85838; }
-.btn_delete:before { background: url('../img/icons-sac7d1e1c55.png') 0 -1967px no-repeat; width: 9px; height: 10px; }
+.btn_delete:before { background: url('../img/icons-sdb9cf36355.png') 0 -3086px no-repeat; width: 9px; height: 10px; }
 
-.popup { position: absolute; top: 50px; left: 50px; width: 580px; height: 200px; background: #e2e5d9; }
-.popup:before, .popup:after { content: ""; position: absolute; }
-.popup:before { top: -39px; left: -5px; background: url('../img/icons-sac7d1e1c55.png') 0 -2385px no-repeat; width: 56px; height: 39px; }
-.popup:after { top: -38px; right: -33px; background: url('../img/icons-sac7d1e1c55.png') 0 -2337px no-repeat; width: 33px; height: 38px; }
+.popup { position: absolute; top: 50px; left: 20px; width: 580px; background: #e2e5d9; }
 
-.popup_contacts { width: 620px; padding: 0 60px; }
+.popup_contacts { width: 620px; padding: 0 40px 0 60px; }
+.popup_contacts .text-field:last-child { margin: 11px 0 35px 0; }
 
-.popup__title { margin-bottom: 25px; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 67px; font-weight: bold; color: #2c6871; text-shadow: rgba(255, 255, 255, 0.3) 0 1px 0; letter-spacing: -3px; }
+.popup_login { width: 325px; padding: 0 20px 0 30px; }
+.popup_login .popup__bg-1 { top: -19px; left: -2px; width: 28px; height: 19px; }
+.popup_login .popup__bg-2 { top: -19px; left: 26px; right: 0; height: 19px; }
+.popup_login .popup__bg-3 { top: -19px; right: -10px; width: 10px; height: 19px; }
+.popup_login .popup__bg-4 { top: 0; bottom: 0; right: -10px; width: 10px; }
+.popup_login .popup__bg-5 { bottom: -18px; right: -10px; width: 10px; height: 18px; }
+.popup_login .popup__bg-6 { bottom: -18px; right: 0; left: 25px; height: 18px; }
+.popup_login .popup__bg-7 { bottom: -18px; left: -3px; width: 28px; height: 18px; }
+.popup_login .popup__title { padding: 0; margin: 0 0 32px 0; font-size: 36px; }
+.popup_login .text-field { margin: 8px 0 33px 0; }
+.popup_login .text-field input { width: 297px; height: 20px; padding: 0 14px; font-size: 18px; }
+.popup_login .text-field .text-field__bg-1, .popup_login .text-field .text-field__bg-2 { height: 20px; }
+.popup_login .text-field .text-field__bg-1 { top: -8px; left: -2px; }
+.popup_login .text-field .text-field__bg-2 { bottom: -8px; left: -2px; }
+.popup_login .popup__error { margin: -7px 0 15px 0; overflow: hidden; }
+.popup_login .popup__error span { float: left; font-size: 14px; }
+.popup_login .popup__error a { float: right; text-decoration: underline; }
+.popup_login .popup__error a:hover, .popup_login .popup__error a.active { color: #349ba6; }
+.popup_login .popup__btn { bottom: -50px; right: 15px; background: url('../img/icons-sdb9cf36355.png') 0 -2961px no-repeat; width: 95px; height: 95px; font-size: 34px; }
+.popup_login .popup__btn:hover { background: url('../img/icons-sdb9cf36355.png') 0 -2856px no-repeat; width: 95px; height: 95px; }
+.popup_login .popup__reset-pass { position: absolute; top: 153px; right: -277px; background: url('../img/icons-sdb9cf36355.png') 0 -2601px no-repeat; width: 295px; height: 130px; z-index: 10; }
+.popup_login .popup__reset-pass p { padding: 22px 70px 15px 42px; font-size: 18px; color: #2c6871; }
+.popup_login .popup__reset-pass .text-field { width: 227px; margin: 0 0 0 40px; }
+.popup_login .popup__reset-pass .text-field input { width: 178px; padding: 0 40px 0 10px; }
+.popup_login .popup__reset-pass .text-field__bg-2 { left: -1px; }
+.popup_login .popup__reset-pass button { position: absolute; top: -6px; right: -4px; background: url('../img/icons-sdb9cf36355.png') 0 -3187px no-repeat; width: 39px; height: 33px; z-index: 10; }
+.popup_login .popup__reset-pass button:hover { background: url('../img/icons-sdb9cf36355.png') 0 -3144px no-repeat; width: 39px; height: 33px; }
+
+.popup__error { font-size: 14px; letter-spacing: -1px; }
+.popup__error span { color: #c85838; }
+
+.popup__fb { margin-bottom: 50px; text-align: center; }
+.popup__fb a { display: inline-block; background: url('../img/icons-sdb9cf36355.png') 0 -2331px no-repeat; width: 188px; height: 30px; }
+
+.popup__or { position: relative; margin-bottom: 15px; text-align: center; }
+.popup__or span { position: relative; display: inline-block; padding: 0 10px; background: #e2e5d9; font-size: 14px; color: #a4a4a4; z-index: 5; }
+.popup__or i { position: absolute; top: 6px; left: 0; width: 100%; border-top: 1px solid #b9b9b9; border-bottom: 1px solid white; }
+
+.popup__title { position: relative; padding: 5px 0 35px 0; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 67px; font-weight: bold; color: #2c6871; text-shadow: rgba(255, 255, 255, 0.3) 0 1px 0; letter-spacing: -3px; z-index: 5; }
 .popup__title span { color: #c85838; }
 
-.popup__bg-1:before, .popup__bg-1:after { content: ""; position: absolute; }
-.popup__bg-1:before { bottom: -36px; right: -33px; background: url('../img/icons-sac7d1e1c55.png') 0 -2211px no-repeat; width: 33px; height: 36px; }
-.popup__bg-1:after { bottom: -36px; left: -5px; background: url('../img/icons-sac7d1e1c55.png') 0 -2291px no-repeat; width: 56px; height: 36px; }
+.popup__bg-1, .popup__bg-2, .popup__bg-3, .popup__bg-4, .popup__bg-5, .popup__bg-6, .popup__bg-7 { position: absolute; }
+.popup__bg-1 img, .popup__bg-2 img, .popup__bg-3 img, .popup__bg-4 img, .popup__bg-5 img, .popup__bg-6 img, .popup__bg-7 img { display: block; width: 100%; height: 100%; }
 
-.popup__bg-2, .popup__bg-3, .popup__bg-4 { position: absolute; }
-.popup__bg-2 img, .popup__bg-3 img, .popup__bg-4 img { width: 100%; height: 100%; }
+.popup__bg-1 { top: -39px; left: -5px; width: 56px; height: 39px; }
 
 .popup__bg-2 { top: -39px; left: 51px; right: 0; height: 39px; }
 
-.popup__bg-3 { top: 0; bottom: 0; right: -33px; width: 33px; }
+.popup__bg-3 { top: -38px; right: -33px; width: 33px; height: 38px; }
 
-.popup__bg-4 { bottom: -37px; right: 0; left: 51px; height: 37px; }
+.popup__bg-4 { top: 0; bottom: 0; right: -33px; width: 33px; }
 
-.text-field { position: relative; }
+.popup__bg-5 { bottom: -36px; right: -33px; width: 33px; height: 36px; }
+
+.popup__bg-6 { bottom: -37px; right: 0; left: 51px; height: 37px; }
+
+.popup__bg-7 { bottom: -36px; left: -5px; width: 56px; height: 36px; }
+
+.popup__btn { position: absolute; bottom: -135px; right: 10px; background: url('../img/icons-sdb9cf36355.png') 0 -1230px no-repeat; width: 220px; height: 220px; font-family: "FiveMinutes", Arial, Tahoma, sans-serif; font-size: 80px; color: white; text-shadow: rgba(0, 0, 0, 0.26) 0 1px 0; text-align: center; letter-spacing: -3px; font-weight: bold; cursor: pointer; z-index: 10; }
+.popup__btn:hover { background: url('../img/icons-sdb9cf36355.png') 0 -1000px no-repeat; width: 220px; height: 220px; }
+
+.text-field { position: relative; margin: 11px 0 58px 0; }
+.text-field input, .text-field textarea { position: relative; width: 570px; border: 1px solid #a7a8a5; border-width: 0 1px 0 1px; background: #f9f9f7; font-size: 34px; font-family: "Cuprum", Arial, Tahoma, sans-serif; z-index: 5; }
+.text-field input { height: 44px; padding: 0 24px; }
+.text-field textarea { height: 420px; padding: 10px 24px; resize: none; }
+
+.text-field__bg-1, .text-field__bg-2 { position: absolute; height: 20px; }
+.text-field__bg-1 img, .text-field__bg-2 img { display: block; width: 100%; height: 100%; }
+
+.text-field__bg-1 { top: -11px; left: -5px; right: -3px; }
+
+.text-field__bg-2 { bottom: -11px; left: -4px; right: -4px; }
