--- a/sass/common.sass
+++ b/sass/common.sass
@@ -253,68 +253,248 @@ table
 .popup
 	position: absolute
 	top: 50px
-	left: 50px
+	left: 20px
 	width: 580px
-	height: 200px
-	background: #e2e5d9
-	&:before, &:after
-		content: ""
-		position: absolute
-	&:before
-		top: -39px
-		left: -5px
-		+sized-sprite($icons, pp-bg1)
-	&:after
-		top: -38px
-		right: -33px
-		+sized-sprite($icons, pp-bg3)
+	background: #e2e5d9	
 .popup_contacts
 	width: 620px
-	padding: 0 60px
+	padding: 0 40px 0 60px
+	.text-field
+		&:last-child
+			margin: 11px 0 35px 0
+.popup_login
+	width: 325px
+	padding: 0 20px 0 30px
+	.popup__bg-1
+		top: -19px
+		left: -2px
+		width: 28px
+		height: 19px
+	.popup__bg-2
+		top: -19px
+		left: 26px
+		right: 0
+		height: 19px
+	.popup__bg-3
+		top: -19px
+		right: -10px
+		width: 10px
+		height: 19px
+	.popup__bg-4
+		top: 0
+		bottom: 0
+		right: -10px
+		width: 10px
+	.popup__bg-5
+		bottom: -18px
+		right: -10px
+		width: 10px
+		height: 18px
+	.popup__bg-6
+		bottom: -18px
+		right: 0
+		left: 25px
+		height: 18px
+	.popup__bg-7
+		bottom: -18px
+		left: -3px
+		width: 28px
+		height: 18px
+	.popup__title
+		padding: 0
+		margin: 0 0 32px 0
+		font-size: 36px
+	.text-field
+		margin: 8px 0 33px 0
+		input
+			width: 297px
+			height: 20px
+			padding: 0 14px
+			font-size: 18px
+		.text-field__bg-1, .text-field__bg-2
+			height: 20px
+		.text-field__bg-1
+			top: -8px
+			left: -2px
+		.text-field__bg-2
+			bottom: -8px
+			left: -2px
+	.popup__error
+		margin: -7px 0 15px 0
+		overflow: hidden
+		span
+			float: left
+			font-size: 14px			
+		a
+			float: right
+			text-decoration: underline
+			&:hover, &.active
+				color: #349ba6
+	.popup__btn
+		bottom: -50px
+		right: 15px
+		+sized-sprite($icons, inp-btn-s)
+		font-size: 34px
+		&:hover
+			+sized-sprite($icons, inp-btn-s-h)
+	.popup__reset-pass
+		position: absolute 
+		top: 153px
+		right: -277px
+		+sized-sprite($icons, reset-pass)	
+		z-index: 10 
+		p
+			padding: 22px 70px 15px 42px
+			font-size: 18px
+			color: $blue-dark
+		.text-field
+			width: 227px
+			margin: 0 0 0 40px
+			input
+				width: 178px
+				padding: 0 40px 0 10px
+		.text-field__bg-2
+			left: -1px
+		button
+			position: absolute
+			top: -6px
+			right: -4px
+			+sized-sprite($icons, ok)	
+			z-index: 10 
+			&:hover
+				+sized-sprite($icons, ok-h)	
+.popup__error
+	font-size: 14px
+	letter-spacing: -1px
+	span
+		color: $red
+.popup__fb
+	margin-bottom: 50px
+	text-align: center
+	a
+		display: inline-block
+		+sized-sprite($icons, fb)
+.popup__or
+	position: relative
+	margin-bottom: 15px
+	text-align: center
+	span
+		position: relative
+		display: inline-block
+		padding: 0 10px
+		background: #e2e5d9
+		font-size: 14px
+		color: #a4a4a4
+		z-index: 5  
+	i
+		position: absolute
+		top: 6px
+		left: 0
+		width: 100%
+		border-top: 1px solid #b9b9b9 
+		border-bottom: 1px solid #fff 
 .popup__title
-	margin-bottom: 25px
+	position: relative
+	padding: 5px 0 35px 0
 	font-family: 'FiveMinutes', Arial, Tahoma, sans-serif		
 	font-size: 67px
 	font-weight: bold 
 	color: $blue-dark
 	text-shadow: rgba(255,255,255,0.3) 0 1px 0
 	letter-spacing: -3px
+	z-index: 5 
 	span
 		color: $red
-.popup__bg-1
-	&:before, &:after
-		content: ""
-		position: absolute
-	&:before
-		bottom: -36px
-		right: -33px
-		+sized-sprite($icons, pp-bg5)
-	&:after
-		bottom: -36px
-		left: -5px
-		+sized-sprite($icons, pp-bg7)
-.popup__bg-2, .popup__bg-3, .popup__bg-4
+.popup__bg-1, .popup__bg-2, .popup__bg-3, .popup__bg-4, .popup__bg-5, .popup__bg-6, .popup__bg-7
 	position: absolute
 	img
+		display: block
 		width: 100%
 		height: 100%
+.popup__bg-1
+	top: -39px
+	left: -5px
+	width: 56px
+	height: 39px
 .popup__bg-2
 	top: -39px
 	left: 51px
 	right: 0
 	height: 39px
 .popup__bg-3
+	top: -38px
+	right: -33px
+	width: 33px
+	height: 38px
+.popup__bg-4
 	top: 0
 	bottom: 0
 	right: -33px
 	width: 33px
-.popup__bg-4
+.popup__bg-5
+	bottom: -36px
+	right: -33px
+	width: 33px
+	height: 36px
+.popup__bg-6
 	bottom: -37px
 	right: 0
 	left: 51px
 	height: 37px
+.popup__bg-7
+	bottom: -36px
+	left: -5px
+	width: 56px
+	height: 36px
+.popup__btn
+	position: absolute
+	bottom: -135px
+	right: 10px
+	+sized-sprite($icons, inp-btn)
+	font-family: 'FiveMinutes', Arial, Tahoma, sans-serif	
+	font-size: 80px
+	color: #fff
+	text-shadow: rgba(0,0,0,0.26) 0 1px 0
+	text-align: center
+	letter-spacing: -3px
+	font-weight: bold 
+	cursor: pointer
+	z-index: 10 
+	&:hover
+		+sized-sprite($icons, inp-btn-h)
 //text-field
 .text-field
-	position: relative
-		
-		
+	position: relative	
+	margin: 11px 0 58px 0 
+	input, textarea
+		position: relative
+		width: 570px		
+		border: 1px solid #a7a8a5
+		border-width: 0 1px 0 1px
+		background: #f9f9f7 
+		font-size: 34px
+		font-family: 'Cuprum', Arial, Tahoma, sans-serif
+		z-index: 5 
+	input
+		height: 44px
+		padding: 0 24px
+	textarea
+		height: 420px
+		padding: 10px 24px
+		resize: none
+.text-field__bg-1, .text-field__bg-2
+	position: absolute
+	height: 20px
+	img
+		display: block
+		width: 100%
+		height: 100%
+.text-field__bg-1
+	top: -11px
+	left: -5px
+	right: -3px	
+.text-field__bg-2
+	bottom: -11px
+	left: -4px
+	right: -4px
+	
