--- a/sass/inner.sass
+++ b/sass/inner.sass
@@ -104,7 +104,50 @@
 		line-height: 1.4
 //profile
 .profile
+	padding: 80px 0 160px 0
 	overflow: hidden
 .profile__photo
+	position: relative
 	float: left
+	width: 222px
+	height: 259px
+	img
+		display: block
+		margin: 9px 0 0 9px
+.profile__photo-bg
+	position: absolute
+	top: 0
+	left: 0
 	+sized-sprite($icons, photo)
+.profile__detail
+	float: right
+	width: 700px
+.profile__desc
+	margin-bottom: 30px 
+	font-size: 16px
+	color: $blue-dark
+	line-height: 1.5
+	button
+		position: relative
+		top: -2px
+		margin-left: 12px
+		+sized-sprite($icons, btn-edit-pr)
+.profile__name
+	position: relative
+	width: 232px	
+	margin: -10px 0 15px -10px
+	input
+		width: 210px
+		height: 69px
+		padding: 0 10px
+		border-radius: 6px
+		border: 1px dashed #959595
+		font-family: 'FiveMinutes', Arial, Tahoma, sans-serif	
+		font-size: 55px
+		color: $blue-dark
+		font-weight: bold 
+	button
+		position: absolute
+		top: 23px
+		right: -15px
+		+sized-sprite($icons, btn-name)
